rock, paper, scissors button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>paper-scissors</title>
 </head>
 <body>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>    
+    
     <script src="script.js"></script>
 </body>
 </html>
