--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>paper-scissors</title>
 </head>
 <body>
+    <div id="results"></div>
+    <div id="score">Human: 0 - Computer: 0</div>
+    <div id="winner"></div>
+    
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>    
